--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,6 @@ edition = "2021"
 [dependencies]
 openssl = { version = "0.10", features = ["vendored"] }
 clap = { version = "4.4.6", features = ["derive"]}
+regex = "1.10.1"
+base64 = "0.21.5"
+sha1 = "0.10.1"
