--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,10 @@
 [package]
-name = "server"
+name = "simplewebserver"
 version = "0.1.5"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-openssl = { version = "0.10", features = ["vendored"] }
 clap = { version = "4.4.6", features = ["derive"]}
-regex = "1.10.1"
-base64 = "0.21.5"
-sha1 = "0.10.1"
-substring = "1.4.5"
+server = { path = "src/server" }
